<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general_settings" >
        <CheckBoxPreference android:key="default_app" android:title="@string/title_defualt_app" android:defaultValue="false" android:enabled="@bool/preKitKat"
            android:fontFamily="sans-serif-light"/>
        <CheckBoxPreference android:key="swipe_to_send_sms" android:title="@string/use_swipe_to_send_sms" android:summary="@string/summary_use_swipe_to_send_sms"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/other_settings">
        <Preference android:title="@string/app_name" android:summary="@string/about_swipesms" android:key="infoswipesms"
            android:fontFamily="sans-serif-light"/>
        <Preference android:title="@string/baracca_software" android:summary="@string/about_bs" android:key="infobaracca"
            android:fontFamily="sans-serif-light"/>

    </PreferenceCategory>


</PreferenceScreen>